maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:18: error: not found: type int
def eviteMur(i:int){
               ^Escaper:37: error: not found: value sommeAngle
    sommeAngle=sommeAngle+1
    ^Escaper:40: error: not found: value sommeAngle
    sommeAngle=sommeAngle-1
    ^