maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle=0
  while(!estSurBiscuit()){
    if(isDirectionFree(Direction.NORTH)&& sommeAngle==0){
      avance()
    } else {
      eviteMur(sommeAngle)
    }
  }
  droite()
  prendBiscuit()
}

    
    
    
def eviteMur(i:int){
  while(getDirection()!=Direction.NORTH){
    	KeepHandOnSideWall(i)
  }
}

def isDirectionFree(dir:Direction): Boolean = {
  setDirection(dir)
  if(estFaceMur()){
    return false
  } else {
    return true
  }
}

def KeepHandOnSideWall(i:Int){
  if (!estFaceMur()){
    avance()
    gauche()
    sommeAngle=sommeAngle+1
  } else{
    droite()
    sommeAngle=sommeAngle-1
  }
}